# rust-diary

./: .gitignore  Cargo.toml  LICENSE  Readme.md  diary_app.service
src/: .main.rs.swp  .setup.rs.swp  config.rs  diary.rs  foreground_main.rs  lib.rs  main.rs  setup.rs  task_manager.rs
src/iplocation/: ipapi.rs  mod.rs
src/storage/: local.rs  mod.rs  notion.rs  notion_md_interop.rs
src/weather/: mod.rs  open_weather.rs
